ensure text is visible while loading

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -434,6 +434,10 @@ EXAMPLE STUDY
 }
 
 
+@font-face {
+   font-display: swap;
+}
+
 
 
 
